--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "description": "React TypeScript on Replit, using Vite bundler",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
@@ -15,13 +14,22 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
+    "css-loader": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "style-loader": "^4.0.0",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "vite": "^5.3.3",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1"
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.1",
+    "styled-components": "^6.1.11"
   }
 }
