--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "uuid": "^10.0.0"
   }
 }
