refactor(Gathering) remove breeding.
For the time being we will focus on gathering/player shop, this is prep for that.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "description": "React TypeScript on Replit, using Vite bundler",
     "scripts": {
       "dev": "vite",
-      "build": "vite build"
+      "build": "vite build",
+      "test": "react-scripts test"
     },
     "keywords": [],
     "author": "",
