--- a/package.json
+++ b/package.json
@@ -4,31 +4,32 @@
     "type": "module",
     "description": "React TypeScript on Replit, using Vite bundler",
     "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "test": "react-scripts test"
+        "dev": "vite",
+        "build": "vite build",
+        "test": "react-scripts test"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-      "@types/react": "^18.2.37",
-      "@types/react-dom": "^18.2.15",
-      "@vitejs/plugin-react": "^4.2.0",
-      "css-loader": "^7.1.2",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "style-loader": "^4.0.0",
-      "typescript": "^5.2.2",
-      "vite": "^5.3.3"
+        "@types/react": "^18.2.37",
+        "@types/react-dom": "^18.2.15",
+        "@vitejs/plugin-react": "^4.2.0",
+        "css-loader": "^7.1.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "style-loader": "^4.0.0",
+        "typescript": "^5.2.2",
+        "vite": "^5.3.3"
     },
     "dependencies": {
-      "@reduxjs/toolkit": "^2.2.6",
-      "react-dnd": "^16.0.1",
-      "react-dnd-html5-backend": "^16.0.1",
-      "react-redux": "^9.1.2",
-      "react-router-dom": "^6.24.1",
-      "styled-components": "^6.1.11",
-      "uuid": "^10.0.0"
+        "@reduxjs/toolkit": "^2.2.6",
+        "deepmerge": "^4.3.1",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
+        "react-redux": "^9.1.2",
+        "react-router-dom": "^6.24.1",
+        "styled-components": "^6.1.11",
+        "uuid": "^10.0.0"
     }
-  }
+}
