--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -30,10 +30,10 @@ jobs:
           release-type: 'simple'
           target-branch: 'main'
 
-      - name: Release Please for develop branch
-        if: github.ref == 'refs/heads/develop'
+      - name: Release Please for development branch
+        if: github.ref == 'refs/heads/development'
         uses: google-github-actions/release-please-action@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           release-type: 'simple'
-          target-branch: 'develop'
+          target-branch: 'development'
