--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -13,6 +13,10 @@ permissions:
 jobs:
   release-please:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        branch: [main, development]
+    
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -22,18 +26,10 @@ jobs:
         with:
           node-version: '14'
 
-      - name: Release Please for main branch
-        if: github.ref == 'refs/heads/main'
+      - name: Release Please
+        if: github.ref == 'refs/heads/${{ matrix.branch }}'
         uses: google-github-actions/release-please-action@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           release-type: 'simple'
-          target-branch: 'main'
-
-      - name: Release Please for development branch
-        if: github.ref == 'refs/heads/development'
-        uses: google-github-actions/release-please-action@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          release-type: 'simple'
-          target-branch: 'development'
+          target-branch: ${{ matrix.branch }}
