--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -19,16 +19,16 @@ jobs:
     
     steps:
       - name: Checkout Repository
-        uses: Fishbone-Aquatics/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: Fishbone-Aquatics/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: '14'
 
       - name: Release Please
         if: github.ref == 'refs/heads/${{ matrix.branch }}'
-        uses: Fishbone-Aquatics/release-please-action@v4
+        uses: google-github-actions/release-please-action@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           release-type: 'simple'
