--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,14 +9,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    env:
-      BRANCH: development
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        with:
-          ref: ${{ env.BRANCH }}
 
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.5.3
@@ -28,8 +23,8 @@ jobs:
           ssh -o StrictHostKeyChecking=no ubuntu@3.133.13.184 << 'EOF'
             cd Aquarium-Capitalists || exit 1
             git fetch origin
-            git checkout ${{ env.BRANCH }}
-            git pull origin ${{ env.BRANCH }}
+            git checkout development
+            git pull origin development
             npm install
             npm run build
             pm2 restart react-app
