--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
         "@reduxjs/toolkit": "^2.2.6",
         "react-dnd": "^16.0.1",
         "react-dnd-html5-backend": "^16.0.1",
+        "react-markdown": "^9.0.1",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.24.1",
+        "remark-autolink-headings": "^7.0.1",
+        "remark-gfm": "^4.0.0",
+        "remark-slug": "^7.0.1",
         "styled-components": "^6.1.11",
         "uuid": "^10.0.0"
     }
