--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -17,7 +17,7 @@ jobs:
           echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
 
       - name: Auto merge changelog PRs
-        if: ${{ github.event.pull_request.labels | contains('autorelease: tagged') && startsWith(github.event.pull_request.title, 'chore(development):') }}
+        if: ${{ startsWith(github.event.pull_request.title, 'chore(development):')  }}
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
